tests/single_instruction_translation_validation/mcsema/register-variants-samereg/pabsd_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:198:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %12)
            ^
0.01user 0.04system 0:00.17elapsed 30%CPU (0avgtext+0avgdata 27284maxresident)k
0inputs+16outputs (0major+3264minor)pagefaults 0swaps
